# music_embedder

./: README.md  pyproject.toml
music_embedder/: check.py
notebooks/: loader.ipynb  mu.ipynb  mu_alternative1.ipynb  mu_copy.ipynb  mu_fiend.ipynb  mu_step1_rewrite.ipynb
